--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,87 +8,186 @@
 	padding: 0;
 }
 
-body {
-	background-color: #fff;
-	font-family: "Lato", serif;
-	color: #000;
-	display: flex;
-	flex-direction: column;
+:root {
+	--color-accent: #18273f;
+	--color-accent-lighter: #b9b9cf;
+	--color-off-white: #e6e6e6;
+	--color-green: #bada55;
+	--color-danger: #ff7268;
+	--color-accent-complementary: #fff;
+}
 
+:root.dark {
+	--color-accent: #fff;
+	--color-off-white: #e6e6e6;
+	--color-green: #bada55;
+	--color-danger: #ff7268;
+	--color-accent-complementary: #121b29;
+}
+
+i {
+	pointer-events: none;
+}
+
+body {
+	background-color: var(--color-accent-lighter);
+	font-family: "Lato", serif;
+	color: var(--color-accent-complementary);
+	display: grid;
+	width: 100%;
+	flex-direction: column;
+	grid-template: auto 1fr auto / 1fr;
 	height: 100vh;
+	user-select: none;
+}
+
+h1 {
+	text-align: left;
+	font-size: 1.5rem;
 }
 
 header {
-	/* min-height: 60px; */
 	padding: 1rem;
-	background-color: #c8d5d9;
-	color: #000;
+	height: max-content;
+	background-color: var(--color-accent);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	font-size: 0.8rem;
+	text-align: right;
+}
+
+footer {
+	padding: 1rem;
+	height: max-content;
+	background-color: var(--color-accent);
+	text-align: center;
+}
+
+footer a {
+	display: inline-block;
+	margin: 0.25rem;
+	/* margin-top: 100px; */
+	text-decoration: none;
+	color: var(--color-accent);
+	padding: 0.25rem 0.5rem;
+	background-color: var(--color-accent-complementary);
+}
+
+footer a:hover {
+	text-decoration: underline;
 }
 
 .shelf {
 	display: grid;
-	grid-template: minmax(150px, auto) / repeat(auto-fill, minmax(310px, 1fr));
-	gap: 1rem;
-	padding: 1rem;
-	justify-items: center;
-	padding-block: 3rem;
-	grid-auto-rows: minmax(150px, auto);
+	grid-template-columns: repeat(auto-fill, 235px);
+	grid-auto-rows: 370px;
+	gap: 2rem;
+	padding: 1.5rem;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .book-card {
-	background-color: #c8d5d9;
-	color: #000;
-	width: 300px;
-	/* border-radius: 8px; */
+	position: relative;
+	background-color: var(--color-accent);
+	/* width: 200px; */
+	/* height: 400px; */
 	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	transition: all 0.2s linear;
+	flex: 0 0 300px;
+	overflow: hidden;
 }
-
-/* .icon {
-	border-radius: 50%;
-	height: 30px;
-	width: 30px;
-	background-color: #000;
-	color: #fff;
-	display: grid;
-	place-items: center;
-	user-select: none;
-	line-height: 1;
-	flex-shrink: 0;
-} */
 
 .book-title {
 	margin-bottom: 1rem;
 }
 
-.book-card > * + * {
-	margin-top: 0.5rem;
+.text-content {
+	display: flex;
+	flex-direction: column;
+	gap: 1.2rem;
+}
+
+.cover-image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background: center/cover var(--background);
+	transition: all 0.3s ease;
+	overflow: hidden;
+}
+
+.read .cover-image::before {
+	position: absolute;
+	right: -46px;
+	top: -11px;
+	content: "";
+	height: 0px;
+	width: 0px;
+	border-left: 70px solid transparent;
+	border-right: 70px solid transparent;
+	border-bottom: 70px solid var(--color-green);
+	transform: rotate(45deg);
+	box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
+	/* background-color: var(--color-green); */
+}
+
+.read .cover-image::after {
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	height: 70px;
+	width: 60px;
+	content: url(../Assets/check.svg);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.book-card:hover .cover-image,
+.book-card:focus-within .cover-image {
+	transform: translateX(-100%);
+}
+
+.cover-image img {
+	height: 100%;
 }
 
 .add-new-book {
-	background-color: #c8d5d9;
-	font-size: 3rem;
-	border: none;
-	transition: all 0.1s ease-in;
+	display: block;
+	background-color: var(--color-accent);
+	color: var(--color-accent-complementary);
+	font-size: 6rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	user-select: none;
 	cursor: pointer;
 }
 
 .book-actions {
 	display: flex;
+	width: 100%;
 	margin-top: 2rem;
 	margin-left: auto;
 	align-items: center;
 	justify-content: space-between;
 }
 
+.book-actions > * {
+	align-self: center;
+}
+
 .button {
-	color: #000;
 	text-decoration: none;
 	align-self: center;
-	background-color: aliceblue;
 	border-radius: 0;
 	border: none;
 	outline: none;
@@ -99,11 +198,13 @@ header {
 }
 
 .hint {
+	color: var(--color-accent);
 	opacity: 0.7;
 	align-self: center;
 }
 
-.add-book-modal {
+.modal {
+	color: var(--color-accent);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -111,13 +212,36 @@ header {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	background-color: rgba(0, 0, 0, 0.329);
+	backdrop-filter: blur(20px);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
+header h2 {
+	cursor: pointer;
+	position: relative;
+}
+header h2::after {
+	content: url(../Assets/edit.svg);
+	position: absolute;
+	top: 0;
+	left: 100%;
+	transform: translate(35%, -10%);
+	opacity: 0;
+	transition: all 0.2s ease;
+}
+header h2:hover {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+header h2:hover::after {
+	opacity: 1;
+}
+
 form {
-	background-color: #fff;
+	background-color: var(--color-accent-complementary);
 	padding: 1.5rem;
 	width: max-content;
 	height: max-content;
@@ -127,13 +251,21 @@ form {
 }
 
 input:not([type="checkbox"]) {
+	border: none;
+	border-bottom: 2px solid #6471869d;
+	outline: none;
 	padding-left: 0.5rem;
 	padding-block: 0.25rem;
 	font-family: inherit;
 	font-size: inherit;
+	transition: all 0.2s linear;
 }
 
-input[type="checkbox"] {
+input:not([type="checkbox"]):focus {
+	border-bottom: 2px solid var(--color-accent);
+}
+
+#completed-check {
 	display: none;
 }
 
@@ -143,29 +275,30 @@ input[type="checkbox"] {
 	gap: 1rem;
 }
 
-.slider-switch {
+#completed-check + .slider-switch {
 	position: relative;
-	background-color: transparent;
-	background-color: white;
 	height: 1rem;
 	width: 2rem;
+	background-color: var(--color-accent-complementary);
 	border-radius: 99vh;
 	box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.25);
-	transition: all 0.25s ease;
-	/* overflow: hidden; */
+	overflow: hidden;
+	transition: all 0.2s linear;
 }
 
-.slider-switch:after {
+#completed-check + .slider-switch:after {
 	position: absolute;
 	content: "";
 	height: 1rem;
 	width: 1rem;
-	background-color: #c8d5d9;
+	background-color: var(--color-accent-complementary);
 	top: 0;
 	left: 0;
 	border-radius: inherit;
-	border: 2px solid #c8d5d9;
-	transition: all 0.25s ease;
+	border: 2px solid var(--color-off-white);
+	transition: all 0.2s linear;
+	transform: translateX(0%);
+	transition: all 0.2s linear;
 }
 
 label {
@@ -176,13 +309,43 @@ label {
 	cursor: pointer;
 }
 
-input[type="checkbox"]:checked + div {
+.read {
+	/* background-color: red; */
+	transition: all 0.2s linear;
+}
+
+.head-modal {
+	display: flex;
+	justify-content: space-between;
+	gap: 2rem;
+}
+
+.danger-button {
+	background-color: var(--color-danger);
+	color: var(--color-accent-complementary);
+}
+
+.safe-button {
+	background-color: var(--color-accent);
+	color: var(--color-accent-complementary);
+}
+
+#completed-check:checked + .slider-switch {
+	background-color: var(--color-green);
+	/* animation: colorSwitch 0.2s linear forwards; */
+}
+
+#completed-check:checked + .slider-switch::after {
+	transform: translateX(100%);
+	/* animation: toggle 0.2s linear forwards; */
+}
+/* input[type="checkbox"]:checked + .slider-switch {
 	background-color: green;
 }
 
-input[type="checkbox"]:checked + div::after {
-	transform: translateX(100%);
-}
+input[type="checkbox"]:checked + .slider-switch::after {
+	left: calc(100% - 1rem);
+} */
 
 .overflow-none {
 	overflow: hidden;
@@ -190,4 +353,40 @@ input[type="checkbox"]:checked + div::after {
 
 .display-none {
 	display: none;
+}
+
+@keyframes toggle {
+	0% {
+		transform: translateX(0%);
+	}
+	100% {
+		transform: translateX(100%);
+	}
+}
+
+@keyframes toggleRev {
+	0% {
+		transform: translateX(100%);
+	}
+	100% {
+		transform: translateX(0%);
+	}
+}
+
+@keyframes colorSwitch {
+	0% {
+		background-color: var(--color-accent-complementary);
+	}
+	100% {
+		background-color: var(--color-green);
+	}
+}
+
+@keyframes colorSwitchRev {
+	0% {
+		background-color: var(--color-green);
+	}
+	100% {
+		background-color: var(--color-accent-complementary);
+	}
 }
