--- a/Styles/style.css
+++ b/Styles/style.css
@@ -40,7 +40,7 @@ body {
 	grid-template: auto 1fr auto / 1fr;
 	height: 100vh;
 	user-select: none;
-	transition: all 0.4s ease;
+	overflow: hidden;
 }
 
 h1 {
@@ -49,7 +49,7 @@ h1 {
 }
 
 header {
-	padding: 1rem;
+	padding: 0.5rem 1rem;
 	height: max-content;
 	background-color: var(--color-accent);
 	display: grid;
@@ -59,19 +59,32 @@ header {
 	font-size: 0.8rem;
 	text-align: right;
 	gap: 2rem;
-	transition: all 0.4s ease;
 }
 
 .dark-mode-check {
 	align-self: flex-end;
 }
 
+::-webkit-scrollbar {
+	width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+	background-color: var(--color-accent-lighter);
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--color-accent);
+	opacity: 0.2;
+	transition: all 1.15s ease-in;
+	border-radius: 99vh;
+}
+
 footer {
-	padding: 1rem;
+	padding: 0.5rem;
 	height: max-content;
 	background-color: var(--color-accent);
 	text-align: center;
-	transition: all 0.4s ease;
 }
 
 footer a {
@@ -82,7 +95,6 @@ footer a {
 	color: var(--color-accent);
 	padding: 0.25rem 0.5rem;
 	background-color: var(--color-accent-complementary);
-	transition: all 0.4s ease;
 }
 
 footer a:hover {
@@ -97,6 +109,8 @@ footer a:hover {
 	padding: 1.5rem;
 	flex-wrap: wrap;
 	justify-content: center;
+	overflow-y: scroll;
+	/* overflow-x: hidden; */
 }
 
 .book-card {
