--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,21 +9,13 @@
 }
 
 :root {
-	--color-accent: #18273f;
-	--color-accent-lighter: #b9b9cf;
-	--color-off-white: #e6e6e6;
+	--color-accent: #2c5364;
+	/* --color-accent-darker: #0f1e24; */
+	--color-accent-darker: #ffffff;
+	--color-accent-off: #173944;
 	--color-green: #bada55;
 	--color-danger: #ff7268;
 	--color-accent-complementary: #fff;
-}
-
-:root.dark {
-	--color-accent: #7586cf;
-	--color-accent-lighter: #0c1118;
-	--color-off-white: #e6e6e6;
-	--color-green: #bada55;
-	--color-danger: #ff7268;
-	--color-accent-complementary: #18273f;
 }
 
 i {
@@ -31,7 +23,7 @@ i {
 }
 
 body {
-	background-color: var(--color-accent-lighter);
+	background-color: var(--color-accent-darker);
 	font-family: "Lato", serif;
 	color: var(--color-accent-complementary);
 	display: grid;
@@ -52,8 +44,7 @@ header {
 	padding: 0.5rem 1rem;
 	height: max-content;
 	background-color: var(--color-accent);
-	display: grid;
-	grid-template: 1fr / 1fr auto auto;
+	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	font-size: 0.8rem;
@@ -70,7 +61,7 @@ header {
 }
 
 ::-webkit-scrollbar-track {
-	background-color: var(--color-accent-lighter);
+	background-color: var(--color-accent-darker);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -90,7 +81,6 @@ footer {
 footer a {
 	display: inline-block;
 	margin: 0.25rem;
-	/* margin-top: 100px; */
 	text-decoration: none;
 	color: var(--color-accent);
 	padding: 0.25rem 0.5rem;
@@ -122,8 +112,14 @@ footer a:hover {
 	justify-content: space-between;
 	transition: all 0.2s linear;
 	flex: 0 0 300px;
-	box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.25);
+	/* box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.25); */
 	overflow: hidden;
+	border-radius: 10px;
+	background-image: linear-gradient(
+		to bottom,
+		var(--color-accent-off),
+		var(--color-accent)
+	);
 }
 
 .book-title {
@@ -142,10 +138,19 @@ footer a:hover {
 	left: 0;
 	height: 100%;
 	width: 100%;
-	transition: all 0.4s linear;
+	transition: all 0.25s linear;
 	overflow: hidden;
 	transform-origin: left;
-	background: center/cover var(--background);
+	background-image: var(--background);
+	background-position: center;
+	background-size: cover;
+	padding: 1rem;
+	gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .read .cover-image::before {
@@ -188,6 +193,11 @@ footer a:hover {
 	display: block;
 	background-color: var(--color-accent);
 	color: var(--color-accent-complementary);
+	background-image: linear-gradient(
+		to bottom,
+		var(--color-accent-off),
+		var(--color-accent)
+	);
 	font-size: 6rem;
 	display: flex;
 	flex-direction: column;
@@ -220,6 +230,7 @@ footer a:hover {
 	font-size: inherit;
 	padding: 0.2rem 0.5rem;
 	cursor: pointer;
+	border-radius: 4px;
 }
 
 .hint {
@@ -325,7 +336,7 @@ input:not([type="checkbox"]):focus {
 	position: relative;
 	height: 1rem;
 	width: 2rem;
-	background-color: var(--color-off-white);
+	background-color: var(--color-accent-off);
 	border-radius: 99vh;
 	box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.25);
 	/* overflow: hidden; */
@@ -341,7 +352,7 @@ input:not([type="checkbox"]):focus {
 	top: 0;
 	left: 0;
 	border-radius: inherit;
-	border: 2px solid var(--color-off-white);
+	border: 2px solid var(--color-accent-off);
 	transition: all 0.2s linear;
 	transform: translateX(0%);
 	transition: all 0.2s linear;
@@ -390,4 +401,11 @@ label {
 
 .display-none {
 	display: none;
+}
+
+.working-info {
+	font-size: 0.9rem;
+	text-align: center;
+	padding: 0.5rem;
+	background-color: transparent;
 }
