--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,13 +9,11 @@
 }
 
 :root {
-	--color-accent: #2c5364;
-	/* --color-accent-darker: #0f1e24; */
-	--color-accent-darker: #ffffff;
-	--color-accent-off: #173944;
-	--color-green: #bada55;
-	--color-danger: #ff7268;
+	--color-accent: #5578c9;
+	--color-accent-off: #88c4e6;
 	--color-accent-complementary: #fff;
+	--color-green: #92e980;
+	--color-danger: #da574d;
 }
 
 i {
@@ -23,7 +21,7 @@ i {
 }
 
 body {
-	background-color: var(--color-accent-darker);
+	background-color: var(--color-accent-complementary);
 	font-family: "Lato", serif;
 	color: var(--color-accent-complementary);
 	display: grid;
@@ -61,7 +59,7 @@ header {
 }
 
 ::-webkit-scrollbar-track {
-	background-color: var(--color-accent-darker);
+	background-color: var(--color-accent-complementary);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -144,39 +142,49 @@ footer a:hover {
 	background-image: var(--background);
 	background-position: center;
 	background-size: cover;
-	padding: 1rem;
 	gap: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	border-radius: 10px;
+	overflow: hidden;
 }
 
 .read .cover-image::before {
 	position: absolute;
-	right: -46px;
-	top: -11px;
+	right: -80px;
+	top: -80px;
 	content: "";
 	height: 0px;
 	width: 0px;
-	border-left: 70px solid transparent;
-	border-right: 70px solid transparent;
-	border-bottom: 70px solid var(--color-green);
+	background-color: var(--color-green);
+	border-top: 80px solid var(--color-green);
+	border-left: 80px solid var(--color-green);
+	border-right: 80px solid var(--color-green);
+	border-bottom: 80px solid var(--color-green);
 	transform: rotate(45deg);
-	box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.404);
+	/* border-radius: 50%; */
 }
 
 .read .cover-image::after {
 	position: absolute;
 	right: 0px;
 	top: 0px;
-	height: 70px;
+	height: 60px;
 	width: 60px;
-	content: url(../Assets/check.svg);
+	/* content: url(../Assets/check.svg); */
+	content: "L";
+	font-size: 3rem;
+	font-weight: 900;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.199));
+	/* box-shadow: 0 0 4px black; */
+	transform: scaleX(-1) rotate(-45deg);
 }
 
 .book-card:hover .cover-image,
@@ -336,7 +344,7 @@ input:not([type="checkbox"]):focus {
 	position: relative;
 	height: 1rem;
 	width: 2rem;
-	background-color: var(--color-accent-off);
+	background-color: var(--color-accent-complementary);
 	border-radius: 99vh;
 	box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.25);
 	/* overflow: hidden; */
@@ -401,11 +409,4 @@ label {
 
 .display-none {
 	display: none;
-}
-
-.working-info {
-	font-size: 0.9rem;
-	text-align: center;
-	padding: 0.5rem;
-	background-color: transparent;
 }
