--- a/Styles/style.css
+++ b/Styles/style.css
@@ -26,11 +26,11 @@ body {
 	color: var(--color-accent-complementary);
 	display: grid;
 	width: 100%;
-	flex-direction: column;
 	grid-template: auto 1fr auto / 1fr;
 	height: 100vh;
+	/* gap: 3rem */
 	user-select: none;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 h1 {
@@ -48,10 +48,9 @@ header {
 	font-size: 0.8rem;
 	text-align: right;
 	gap: 2rem;
-}
-
-.dark-mode-check {
-	align-self: flex-end;
+	position: sticky;
+	top: 0;
+	z-index: 2;
 }
 
 ::-webkit-scrollbar {
@@ -63,10 +62,9 @@ header {
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--color-accent);
+	background: rgba(0, 0, 0, 0.712);
 	opacity: 0.2;
 	transition: all 1.15s ease-in;
-	border-radius: 99vh;
 }
 
 footer {
@@ -97,8 +95,7 @@ footer a:hover {
 	padding: 1.5rem;
 	flex-wrap: wrap;
 	justify-content: center;
-	overflow-y: scroll;
-	/* overflow-x: hidden; */
+	/* overflow-y: scroll; */
 }
 
 .book-card {
@@ -258,6 +255,7 @@ footer a:hover {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	z-index: 10;
 }
 
 .modal-overlay {
